# progs

mycpp/: .test.cpp.swp  a.out  boost_tokanize.cpp  curl-simple-post.cpp  gethostname.cpp  readwritelock.cpp  shm_client.cpp  shm_com.h  shm_server.cpp  shmclient  shmserv  simple-thread-test  simple-thread-test.cpp  simple-thread.cpp  stringstream.cpp  systemexamp.c  test.cpp  test01.cpp  thread-interruption.cpp  thread_sharedptr.cpp  thread_sum.cpp
mycpp/boost_threads/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  findsum.cpp  findsum.h  main.cpp
myperl/: .project  ExecRemoteCmd.pm  FrontierIMAPMail.conf  MF_CFG_VERSION  MyAppendMessage.pm  MyFetchEmail.pm  MyMailMigrateUtil.pm  Parse.pm  SkyMailMigrate-debug-dr.pl  SkyMailMigrate-manual-folder-ymcm.pl  SkyMailMigrate-manual-folder.pl  SkyMailMigrate-manual-onlyfetch.pl  SkyMailMigrate-manual-ymcm.pl  SkyMailMigrate-manual.pl  Thread.pm  analyze-events-back.pl  analyze-events.pl  buildroot.pl  checkArchiveEvents.pl  checkArchiveEventsParallel.pl  checkMbox.pl  checkMboxParallel.pl  checkNonAscii.pl  config.conf  configConverter.pl  connect-frontier-imap.pl  connect-gmail-imap.pl  connectPopSasl.pl  createArchiveEvent.pl  createArchiveEventParallel.pl  createFluidEvent.pl  createJson.pl  createulist.pl  curl.trace  decode-i-param.pl  dectohex.pl  dump-uidls.pl  fetchCalendar.pl  fetchContact.pl  fileio.pl  (+70 more)
myphp/: Makefile  Makefile.objects  SocDirTestHttpResponse.php  acinclude.m4  aclocal.m4  configure  configure.in  hello.ini  hello.la  hello.lo  libtool
myshell/: bucketChkMbox1953.sh  (+14 more)
(+88 files in other folders)
